# Digital-Template-to-XBRL-Converter

./: pyproject.toml
.github/workflows/: monitor-open-prs-and-analyze.yml  monitor-upstream-and-analyze.yml  monitor-upstream.yml
digital-templates/: VSME-Digital-Template-1.3.0.xlsx  VSME-Digital-Template-Sample-1.3.0.xlsx
scripts/: dump-taxonomy.py  parse-and-dump.py  parse-and-ixbrl.py
src/digital_converter_webapp/: __init__.py  migration.py
src/digital_converter_webapp/static/: all.js  style.css
src/digital_converter_webapp/templates/: _macros.html.jinja  base.html.jinja  conversion-results.html.jinja  conversions.html.jinja  excel-to-xbrl-converter.html.jinja  migration_page.html.jinja  partial-facts.html.jinja
src/mireport/: conversionresults.py  stringutil.py  taxonomy.py  version.py
src/mireport/data/disclosures/: __init__.py  vsme.json
src/mireport/data/taxonomies/: vsme-2026-05-01.json
src/mireport/report/: disclosure_layout.py  fact.py  footnote.py  inlinereport.py  layout.py
src/mireport/report/inline_report_templates/: _macros.html.jinja  inline-report-presentation.html.jinja  style-efrag.css.jinja
src/mireport/xlsx_template_reader/: _bindings.py  _constants.py  _fact_creator.py  _reader.py  dump.py  processor.py  util.py
tests/unitTests/: test_layout.py  test_stringutil.py  test_version.py
tests/unitTests/xlsx_template_reader/: conftest.py  test_constants.py  test_excel_processor_init.py  test_external_values.py  test_fact_creator.py  test_footnotes.py
tests/webappTests/: conftest.py  test_captcha.py  test_pages.py  test_partial_facts.py
webpages/: index.html
webpages/homepage/: homepage.html
webpages/homepage/homepage_style/: homepage_style.css
webpages/homepage/other_pages/technical_faq/: technical_faq.html
webpages/homepage/other_pages/technical_faq/faq_style/: faq_style.css
webpages/index_style/: index_style.css
