[project]
name = "EFRAG-DigitalTemplateToXBRL-Converter"
version = "1.3.0"
description = "Converts a filled-in Excel template into an Inline XBRL Report"
authors = [
    {name = "Stuart Rowan", email = "stuart.rowan@efrag.org"},
    {name = "Richard Bössen", email = "richard.boessen@efrag.org"},
]

dependencies = [
    "aoix@git+https://code.blinkace.com/xbrl/aoix.git@strr/dev",
    "arelle-release>=2.39.6",
    "babel>=2.17.0",
    "flask-session",
    "flask",
    "ixbrl-viewer>=1.4.90",
    "mammoth",
    "markupsafe",
    "msgpack",
    "openpyxl",
    "pillow>=11.3.0",
    "python-dateutil",
    "python-dotenv>=1.0.1",
    "rcssmin==1.2.2",
    "rich>=14.0.0",
    "waitress",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Source code" = "https://github.com/EFRAG-EU/Digital-Template-to-XBRL-Converter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow use of git URLs in dependencies
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mireport", "src/digital_converter_webapp"]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.18.1",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.0.0",
    "pytest-flask>=1.3.0",
    "pytest>=7.0.0",
    "ruff>=0.12.2",
    "safety>=3.2.9",
    "types-lxml",
    "types-openpyxl",
    "types-python-dateutil",
    "types-Werkzeug",
]

redis = [
    "flask-rq>=0.3.3",
    "flask-session[redis]",
]

migration = [
    "migration_tool@git+https://github.com/EFRAG-EU/Digital-Template-Data-Migration-Tool.git@b931702",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselected by default; pass --run-slow to include)",
]
addopts = [
    "-ra -q",
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = [
    "^tests/",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]
